--- a/004-Projects/bookshelf-apps/style.css
+++ b/004-Projects/bookshelf-apps/style.css
@@ -1,171 +1,91 @@
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+body {
+  font-family: Arial, sans-serif;
+  background-color: #f4f4f4;
+  margin: 0;
+  padding: 20px;
 }
 
-body, input, button {
-    font-family: 'Open Sans', sans-serif;
+.container {
+  max-width: 800px;
+  margin: 10px auto;
+  padding: 20px 20px 10px 20px;
+  background-color: #fff;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-input, button {
-    font-size: 16px;
+h1 {
+  text-align: center;
 }
 
-.head_bar {
-    padding: 12px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: cornflowerblue;
-    color: white;
+form {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
 }
 
-main {
-    max-width: 800px;
-    width: 80%;
-    margin: 0 auto;
-    padding: 16px;
-
+form input,
+form button {
+  padding: 10px;
+  margin-bottom: 10px;
 }
 
-.input_section {
-    display: flex;
-    flex-direction: column;
-    padding: 16px;
-    border: 1px solid black;
-    border-radius: 10px;
+form button {
+  background-color: #028391;
+  color: white;
+  border: none;
+  cursor: pointer;
 }
 
-.input_section > h2 {
-    text-align: center;
-    color: cornflowerblue;
+form button:hover {
+  background-color: #0c545c;
 }
 
-.input_section > form > .input {
-    margin: 8px 0;
+.book-shelf {
+  margin-bottom: 20px;
 }
 
-.input_section > form > button {
-    background-color: cornflowerblue;
-    color: white;
-    border: 0;
-    border-radius: 5px;
-    display: block;
-    width: 100%;
-    padding: 8px;
-    cursor: pointer;
+.book-shelf h2 {
+  border-bottom: 2px solid #ddd;
+  padding-bottom: 10px;
+  text-align: center;
 }
 
-.input_section > form > button > span {
-    font-weight: bold;
+.book {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  margin-bottom: 10px;
+  background-color: #f9f9f9;
+  border: 1px solid #ddd;
+  border-radius: 5px;
 }
 
-.input_section > form > .input > input {
-    display: block;
-    width: 100%;
-    padding: 8px;
-    border-radius: 5px;
+.book button {
+  margin-left: 10px;
+  padding: 5px 10px;
+  cursor: pointer;
 }
 
-
-.input_section > form > .input > label {
-    color: cornflowerblue;
-    font-weight: bold;
+.book button.isComplete {
+  background-color: #003285;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
 }
 
-.input_section > form > .input_inline {
-    margin: 12px 0;
-    display: flex;
-    align-items: center;
+.book button.delete {
+  background-color: #ee4e4e;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
 }
 
-.input_section > form > .input_inline > label {
-    color: cornflowerblue;
-    font-weight: bold;
-    margin-right: 10px;
+#search-container {
+  margin-bottom: 20px;
 }
 
-.search_section {
-    margin: 16px 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 16px;
-    border: 1px solid black;
-    border-radius: 10px;
-}
-
-.search_section > h2 {
-    color: cornflowerblue;
-}
-
-.search_section > form {
-    padding: 16px;
-    width: 100%;
-    display: grid;
-    grid-template-columns: auto 1fr 0.5fr;
-    grid-gap: 10px;
-}
-
-.search_section > form > label {
-    display: flex;
-    align-items: center;
-}
-
-.search_section > form > input {
-    padding: 5px;
-    border-radius: 5px;
-}
-
-.search_section > form > button {
-    background-color: cornflowerblue;
-    color: white;
-    border: 0;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-.book_shelf {
-    margin: 16px 0 0 0;
-    border: 1px solid black;
-    padding: 16px;
-    border-radius: 10px;
-}
-
-.book_shelf > h2 {
-    color: cornflowerblue;
-}
-
-.book_shelf > .book_list {
-    padding: 16px;
-}
-
-.book_shelf > .book_list > .book_item {
-    padding: 8px 16px 16px 16px;
-    border: 1px solid black;
-    border-radius: 5px;
-    margin: 10px 0;
-}
-
-.book_shelf > .book_list > .book_item > h3, p {
-    margin: 8px 0;
-}
-
-.book_shelf > .book_list > .book_item > .action > button {
-    border: 0;
-    padding: 5px;
-    margin: 0 5px 0 0;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-.book_shelf > .book_list > .book_item > .action > .green {
-    background-color: darkgreen;
-    color: white;
-}
-
-.book_shelf > .book_list > .book_item > .action > .red {
-    background-color: darkred;
-    color: white;
+#search-container input {
+  padding: 10px;
+  width: 97%;
 }
